# bikelane-causal

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements-phase1.txt  requirements.txt
config/: analysis.json
data/derived/: README.md
data/input/: README.md
data/reference/: README.md  cdot_candidates_2024.csv  cdot_candidates_2025.csv  chicago_bike_routes_2022.geojson  chicago_bike_routes_current.geojson  corridor_candidates.csv  corridor_candidates.geojson  preliminary_station_assignment.csv  treatment_inventory.csv
docs/: project_plan.md  research_brief.md
reports/: data_quality_report.md  feasibility_report.md  geometry_audit.csv  panel_build_summary.json  phase1_summary.json  phase3_calendar_series.csv  phase3_control_comparison.csv  phase3_control_matches.csv  phase3_corridor_diagnostics.csv  phase3_event_time_series.csv  phase3_gate_summary.json  phase3_identification_decision.md  phase3_pretrend_leads.csv  phase3_pretrend_leads_summary.json  phase3a_diagnostics.md  phase3a_summary.json  power_audit.csv  pretrend_screen.csv
scripts/: build_phase1_audit.py
src/bikelane_causal/: __init__.py  diagnostics.py  identification_gate.py  pipeline.py  pretrend_leads.py
tests/: conftest.py  test_analysis_panel.py  test_phase3_diagnostics.py  test_phase3_gate.py
